package be.kdg.snakejavafx.model;

import java.time.LocalDateTime;

public class Highscore {
    public String playerName;
    public int score;
    public Size levelSize;
    public Difficulty difficulty;
    public LocalDateTime startTime;
    public LocalDateTime endTime;
}
